--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="{{ site.baseurl }}/about">About</a> page.
+Seems like you have come to the end. have a chance at revival by rolling the <a class="internal-link" href="{{ site.baseurl }}/about">dice</a> .
